Removed activeOntology as no longer used